// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test dev 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValueawsserviceamiamazonlinuxlatestal2022amikernel510x8664C96584B6F00A464EAD1953AFF4B05118Parameter": Object {
      "Default": "/aws/service/ami-amazon-linux-latest/al2022-ami-kernel-5.10-x86_64",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
    },
  },
  "Resources": Object {
    "NetworkEC2SgD140AE73": Object {
      "Properties": Object {
        "GroupDescription": "Stack/Network/EC2Sg",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "from 0.0.0.0/0:ALL PORTS",
            "FromPort": 0,
            "IpProtocol": "tcp",
            "ToPort": 65535,
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "NetworkVpc7FB7348F": Object {
      "Properties": Object {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "dev-vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "NetworkVpcIGW6BEA7B02": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "dev-vpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "NetworkVpcIsolatedSubnet1RouteTableAssociation95EB126D": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "NetworkVpcIsolatedSubnet1RouteTableC39A3F61",
        },
        "SubnetId": Object {
          "Ref": "NetworkVpcIsolatedSubnet1Subnet0400477E",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcIsolatedSubnet1RouteTableC39A3F61": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcIsolatedSubnet1Subnet0400477E": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            0,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcIsolatedSubnet2RouteTable77E6320E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcIsolatedSubnet2RouteTableAssociationC53FE45A": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "NetworkVpcIsolatedSubnet2RouteTable77E6320E",
        },
        "SubnetId": Object {
          "Ref": "NetworkVpcIsolatedSubnet2SubnetF65B365A",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcIsolatedSubnet2SubnetF65B365A": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            1,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcPublicSubnet1DefaultRoute31EC04EC": Object {
      "DependsOn": Array [
        "NetworkVpcVPCGW8F3799B5",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "RouteTableId": Object {
          "Ref": "NetworkVpcPublicSubnet1RouteTable30235CE2",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "NetworkVpcPublicSubnet1RouteTable30235CE2": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcPublicSubnet1RouteTableAssociation643926C7": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "NetworkVpcPublicSubnet1RouteTable30235CE2",
        },
        "SubnetId": Object {
          "Ref": "NetworkVpcPublicSubnet1Subnet36933139",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcPublicSubnet1Subnet36933139": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            0,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcPublicSubnet2DefaultRoute0CF082AB": Object {
      "DependsOn": Array [
        "NetworkVpcVPCGW8F3799B5",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "RouteTableId": Object {
          "Ref": "NetworkVpcPublicSubnet2RouteTable0FACEBB2",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "NetworkVpcPublicSubnet2RouteTable0FACEBB2": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcPublicSubnet2RouteTableAssociationC662643B": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "NetworkVpcPublicSubnet2RouteTable0FACEBB2",
        },
        "SubnetId": Object {
          "Ref": "NetworkVpcPublicSubnet2SubnetC427CCE0",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcPublicSubnet2SubnetC427CCE0": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            1,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcVPCGW8F3799B5": Object {
      "Properties": Object {
        "InternetGatewayId": Object {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
    "ServerInstanceE518391B": Object {
      "DependsOn": Array [
        "ServerInstanceInstanceRoleF9CE4B3B",
      ],
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            0,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "IamInstanceProfile": Object {
          "Ref": "ServerInstanceInstanceProfile5CC6E324",
        },
        "ImageId": Object {
          "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestal2022amikernel510x8664C96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "InstanceType": "t3.small",
        "SecurityGroupIds": Array [
          Object {
            "Fn::GetAtt": Array [
              "NetworkEC2SgD140AE73",
              "GroupId",
            ],
          },
        ],
        "SubnetId": Object {
          "Ref": "NetworkVpcIsolatedSubnet1Subnet0400477E",
        },
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Server/Instance",
          },
        ],
        "UserData": Object {
          "Fn::Base64": "#!/bin/bash",
        },
      },
      "Type": "AWS::EC2::Instance",
    },
    "ServerInstanceInstanceProfile5CC6E324": Object {
      "Properties": Object {
        "Roles": Array [
          Object {
            "Ref": "ServerInstanceInstanceRoleF9CE4B3B",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "ServerInstanceInstanceRoleF9CE4B3B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Server/Instance",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`snapshot test prd 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValueawsserviceamiamazonlinuxlatestal2022amikernel510x8664C96584B6F00A464EAD1953AFF4B05118Parameter": Object {
      "Default": "/aws/service/ami-amazon-linux-latest/al2022-ami-kernel-5.10-x86_64",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
    },
  },
  "Resources": Object {
    "NetworkEC2SgD140AE73": Object {
      "Properties": Object {
        "GroupDescription": "Stack/Network/EC2Sg",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "from 0.0.0.0/0:ALL PORTS",
            "FromPort": 0,
            "IpProtocol": "tcp",
            "ToPort": 65535,
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "NetworkVpc7FB7348F": Object {
      "Properties": Object {
        "CidrBlock": "10.2.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "prd-vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "NetworkVpcIGW6BEA7B02": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "prd-vpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "NetworkVpcIsolatedSubnet1RouteTableAssociation95EB126D": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "NetworkVpcIsolatedSubnet1RouteTableC39A3F61",
        },
        "SubnetId": Object {
          "Ref": "NetworkVpcIsolatedSubnet1Subnet0400477E",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcIsolatedSubnet1RouteTableC39A3F61": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcIsolatedSubnet1Subnet0400477E": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            0,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.2.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcIsolatedSubnet2RouteTable77E6320E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcIsolatedSubnet2RouteTableAssociationC53FE45A": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "NetworkVpcIsolatedSubnet2RouteTable77E6320E",
        },
        "SubnetId": Object {
          "Ref": "NetworkVpcIsolatedSubnet2SubnetF65B365A",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcIsolatedSubnet2SubnetF65B365A": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            1,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.2.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcPublicSubnet1DefaultRoute31EC04EC": Object {
      "DependsOn": Array [
        "NetworkVpcVPCGW8F3799B5",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "RouteTableId": Object {
          "Ref": "NetworkVpcPublicSubnet1RouteTable30235CE2",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "NetworkVpcPublicSubnet1RouteTable30235CE2": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcPublicSubnet1RouteTableAssociation643926C7": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "NetworkVpcPublicSubnet1RouteTable30235CE2",
        },
        "SubnetId": Object {
          "Ref": "NetworkVpcPublicSubnet1Subnet36933139",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcPublicSubnet1Subnet36933139": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            0,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.2.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcPublicSubnet2DefaultRoute0CF082AB": Object {
      "DependsOn": Array [
        "NetworkVpcVPCGW8F3799B5",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "RouteTableId": Object {
          "Ref": "NetworkVpcPublicSubnet2RouteTable0FACEBB2",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "NetworkVpcPublicSubnet2RouteTable0FACEBB2": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcPublicSubnet2RouteTableAssociationC662643B": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "NetworkVpcPublicSubnet2RouteTable0FACEBB2",
        },
        "SubnetId": Object {
          "Ref": "NetworkVpcPublicSubnet2SubnetC427CCE0",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcPublicSubnet2SubnetC427CCE0": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            1,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.2.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcVPCGW8F3799B5": Object {
      "Properties": Object {
        "InternetGatewayId": Object {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
    "ServerInstanceE518391B": Object {
      "DependsOn": Array [
        "ServerInstanceInstanceRoleF9CE4B3B",
      ],
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            0,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "IamInstanceProfile": Object {
          "Ref": "ServerInstanceInstanceProfile5CC6E324",
        },
        "ImageId": Object {
          "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestal2022amikernel510x8664C96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "InstanceType": "t3.large",
        "SecurityGroupIds": Array [
          Object {
            "Fn::GetAtt": Array [
              "NetworkEC2SgD140AE73",
              "GroupId",
            ],
          },
        ],
        "SubnetId": Object {
          "Ref": "NetworkVpcIsolatedSubnet1Subnet0400477E",
        },
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Server/Instance",
          },
        ],
        "UserData": Object {
          "Fn::Base64": "#!/bin/bash",
        },
      },
      "Type": "AWS::EC2::Instance",
    },
    "ServerInstanceInstanceProfile5CC6E324": Object {
      "Properties": Object {
        "Roles": Array [
          Object {
            "Ref": "ServerInstanceInstanceRoleF9CE4B3B",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "ServerInstanceInstanceRoleF9CE4B3B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Server/Instance",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`snapshot test stg 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValueawsserviceamiamazonlinuxlatestal2022amikernel510x8664C96584B6F00A464EAD1953AFF4B05118Parameter": Object {
      "Default": "/aws/service/ami-amazon-linux-latest/al2022-ami-kernel-5.10-x86_64",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
    },
  },
  "Resources": Object {
    "NetworkEC2SgD140AE73": Object {
      "Properties": Object {
        "GroupDescription": "Stack/Network/EC2Sg",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "from 0.0.0.0/0:ALL PORTS",
            "FromPort": 0,
            "IpProtocol": "tcp",
            "ToPort": 65535,
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "NetworkVpc7FB7348F": Object {
      "Properties": Object {
        "CidrBlock": "10.1.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "stg-vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "NetworkVpcIGW6BEA7B02": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "stg-vpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "NetworkVpcIsolatedSubnet1RouteTableAssociation95EB126D": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "NetworkVpcIsolatedSubnet1RouteTableC39A3F61",
        },
        "SubnetId": Object {
          "Ref": "NetworkVpcIsolatedSubnet1Subnet0400477E",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcIsolatedSubnet1RouteTableC39A3F61": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcIsolatedSubnet1Subnet0400477E": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            0,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.1.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcIsolatedSubnet2RouteTable77E6320E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcIsolatedSubnet2RouteTableAssociationC53FE45A": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "NetworkVpcIsolatedSubnet2RouteTable77E6320E",
        },
        "SubnetId": Object {
          "Ref": "NetworkVpcIsolatedSubnet2SubnetF65B365A",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcIsolatedSubnet2SubnetF65B365A": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            1,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.1.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcPublicSubnet1DefaultRoute31EC04EC": Object {
      "DependsOn": Array [
        "NetworkVpcVPCGW8F3799B5",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "RouteTableId": Object {
          "Ref": "NetworkVpcPublicSubnet1RouteTable30235CE2",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "NetworkVpcPublicSubnet1RouteTable30235CE2": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcPublicSubnet1RouteTableAssociation643926C7": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "NetworkVpcPublicSubnet1RouteTable30235CE2",
        },
        "SubnetId": Object {
          "Ref": "NetworkVpcPublicSubnet1Subnet36933139",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcPublicSubnet1Subnet36933139": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            0,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.1.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcPublicSubnet2DefaultRoute0CF082AB": Object {
      "DependsOn": Array [
        "NetworkVpcVPCGW8F3799B5",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "RouteTableId": Object {
          "Ref": "NetworkVpcPublicSubnet2RouteTable0FACEBB2",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "NetworkVpcPublicSubnet2RouteTable0FACEBB2": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcPublicSubnet2RouteTableAssociationC662643B": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "NetworkVpcPublicSubnet2RouteTable0FACEBB2",
        },
        "SubnetId": Object {
          "Ref": "NetworkVpcPublicSubnet2SubnetC427CCE0",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcPublicSubnet2SubnetC427CCE0": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            1,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.1.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcVPCGW8F3799B5": Object {
      "Properties": Object {
        "InternetGatewayId": Object {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "VpcId": Object {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
    "ServerInstanceE518391B": Object {
      "DependsOn": Array [
        "ServerInstanceInstanceRoleF9CE4B3B",
      ],
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            0,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "IamInstanceProfile": Object {
          "Ref": "ServerInstanceInstanceProfile5CC6E324",
        },
        "ImageId": Object {
          "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestal2022amikernel510x8664C96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "InstanceType": "t3.large",
        "SecurityGroupIds": Array [
          Object {
            "Fn::GetAtt": Array [
              "NetworkEC2SgD140AE73",
              "GroupId",
            ],
          },
        ],
        "SubnetId": Object {
          "Ref": "NetworkVpcIsolatedSubnet1Subnet0400477E",
        },
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Server/Instance",
          },
        ],
        "UserData": Object {
          "Fn::Base64": "#!/bin/bash",
        },
      },
      "Type": "AWS::EC2::Instance",
    },
    "ServerInstanceInstanceProfile5CC6E324": Object {
      "Properties": Object {
        "Roles": Array [
          Object {
            "Ref": "ServerInstanceInstanceRoleF9CE4B3B",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "ServerInstanceInstanceRoleF9CE4B3B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Stack/Server/Instance",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
